# dotfiles

./: .gitignore  install.sh
X11/: .Xresources  .xinitrc  big.sh
gammastep/: config
ghostty/: config
git/: config
i3/: config  i3status.conf
mako/: config
nvim/: init.lua  lazy-lock.json  pyproject.toml
redshift/: redshift.conf
rofi/: config.rasi  theme.rasi
sway/: config
sway/scripts/: lock.sh  powermenu.sh
swaylock/: config
tmux/: tmux.conf
tmuxp/: arch_installer.yml  dotfiles.yml  go_server.yml  learn_go.yml  nlp.yml
waybar/: config  style.css
zsh/: .zshenv  .zshrc  aliases  scripts.sh
