[project]
name = "nvim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "jupyter-client>=8.6.3",
    "jupytext>=1.17.3",
    "kaleido>=1.0.0",
    "nbformat>=5.10.4",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "pnglatex>=1.1",
    "pynvim>=0.5.2",
    "pyperclip>=1.9.0",
    "requests>=2.32.5",
    "websocket-client>=1.8.0",
]
